--- a/02_ExploratoryDataAnalysis.ipynb
+++ b/02_ExploratoryDataAnalysis.ipynb
@@ -45,18 +45,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "--Zw4ybNlf4c",
-        "outputId": "228b5a4d-efb5-4db0-b70f-4e34770a8068"
+        "outputId": "0bdbbd29-2b28-49c0-f1da-c3a01a6bb42f"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
